@@ -1,8 +1,8 @@
 package com.pei.dehaze.service.impl;
 
-import cn.hutool.core.collection.CollectionUtil;
+import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.lang.Assert;
-import cn.hutool.core.util.StrUtil;
+import cn.hutool.core.text.CharSequenceUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
@@ -19,7 +19,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 数据字典项业务实现类
@@ -51,14 +50,13 @@ public class SysDictServiceImpl extends ServiceImpl<SysDictMapper, SysDict> impl
         Page<SysDict> dictItemPage = this.page(
                 new Page<>(pageNum, pageSize),
                 new LambdaQueryWrapper<SysDict>()
-                        .like(StrUtil.isNotBlank(keywords), SysDict::getName, keywords)
-                        .eq(StrUtil.isNotBlank(typeCode), SysDict::getTypeCode, typeCode)
+                        .like(CharSequenceUtil.isNotBlank(keywords), SysDict::getName, keywords)
+                        .eq(CharSequenceUtil.isNotBlank(typeCode), SysDict::getTypeCode, typeCode)
                         .select(SysDict::getId, SysDict::getName, SysDict::getValue, SysDict::getStatus)
         );
 
         // 实体转换
-        Page<DictPageVO> pageResult = dictConverter.entity2Page(dictItemPage);
-        return pageResult;
+        return dictConverter.entity2Page(dictItemPage);
     }
 
     /**
@@ -84,8 +82,7 @@ public class SysDictServiceImpl extends ServiceImpl<SysDictMapper, SysDict> impl
         Assert.isTrue(entity != null, "字典数据项不存在");
 
         // 实体转换
-        DictForm dictForm = dictConverter.entity2Form(entity);
-        return dictForm;
+        return dictConverter.entity2Form(entity);
     }
 
     /**
@@ -99,8 +96,7 @@ public class SysDictServiceImpl extends ServiceImpl<SysDictMapper, SysDict> impl
         // 实体对象转换 form->entity
         SysDict entity = dictConverter.form2Entity(dictForm);
         // 持久化
-        boolean result = this.save(entity);
-        return result;
+        return this.save(entity);
     }
 
     /**
@@ -113,8 +109,7 @@ public class SysDictServiceImpl extends ServiceImpl<SysDictMapper, SysDict> impl
     @Override
     public boolean updateDict(Long id, DictForm dictForm) {
         SysDict entity = dictConverter.form2Entity(dictForm);
-        boolean result = this.updateById(entity);
-        return result;
+        return this.updateById(entity);
     }
 
     /**
@@ -125,16 +120,14 @@ public class SysDictServiceImpl extends ServiceImpl<SysDictMapper, SysDict> impl
      */
     @Override
     public boolean deleteDict(String idsStr) {
-        Assert.isTrue(StrUtil.isNotBlank(idsStr), "删除数据为空");
+        Assert.isTrue(CharSequenceUtil.isNotBlank(idsStr), "删除数据为空");
         //
-        List<Long> ids = Arrays.asList(idsStr.split(","))
-                .stream()
-                .map(id -> Long.parseLong(id))
-                .collect(Collectors.toList());
+        List<Long> ids = Arrays.stream(idsStr.split(","))
+                .map(Long::parseLong)
+                .toList();
 
         // 删除字典数据项
-        boolean result = this.removeByIds(ids);
-        return result;
+        return this.removeByIds(ids);
     }
 
     /**
@@ -152,11 +145,10 @@ public class SysDictServiceImpl extends ServiceImpl<SysDictMapper, SysDict> impl
         );
 
         // 转换下拉数据
-        List<Option<String>> options = CollectionUtil.emptyIfNull(dictList)
+        return CollUtil.emptyIfNull(dictList)
                 .stream()
                 .map(dictItem -> new Option<>(dictItem.getValue(), dictItem.getName()))
-                .collect(Collectors.toList());
-        return options;
+                .toList();
     }
 }
 
